osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_when_rules_tier/test_when_rules_rejects_tier_typo.txt
error: invalid tier value: `syc`
--> main.sml:7:9
     |
   7 |     tier="syc",
     |          ^ allowed tiers are: `async`, `both`, `legacy`, `sync`
                | omit the kwarg to default to `legacy` behavior